--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -31,9 +31,9 @@ jobs:
         run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
       - uses: actions/checkout@master
       - name: Build image
-        run: docker build -t $LOGIN/$NAME:${GITHUB_REF:11} -f Dockerfile .
+        run: docker build -t $LOGIN/$NAME:${GITHUB_REF} -f Dockerfile .
       - name: Push image to docker.io
-        run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
+        run: docker push $LOGIN/$NAME:${GITHUB_REF}
 
 #   deploy:
 #     # Если мы успешно собрали контейнер и отправили в registry, то делаем хук деплоймент серверу
