--- a/.github/workflows/public.yml
+++ b/.github/workflows/public.yml
@@ -38,11 +38,11 @@ jobs:
   sms_to_telegram:
     # Если мы успешно собрали контейнер и отправили в registry, то делаем хук деплоймент серверу
     # Попробуем готовый экшен curl из маркетплэйса
-    needs: [build_and_pub]
+    # needs: [build_and_pub]
     runs-on: [ubuntu-latest]
     steps:
-      - name: Set tag to env
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:11})
+      # - name: Set tag to env
+      #   run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:11})
       - name: Send webhook for deploy
         # run: "curl --silent --show-error --fail -X POST ${{ secrets.DEPLOYMENT_SERVER }} -H 'Authorization: ${{ secrets.DEPLOYMENT_TOKEN }}' -H 'Content-Type: application/json' -d '{\"owner\": \"${{ secrets.DOCKER_LOGIN }}\", \"repository\": \"${{ secrets.DOCKER_NAME }}\", \"tag\": \"${{ env.RELEASE_VERSION }}\", \"ports\": {\"8080\": 8080}}'"
         run: "curl --silent --show-error --fail -X 'POST' 'http://77.232.131.238/git/' -H 'accept: application/json' -H 'Autorization: 123' -H 'Content-Type: application/json' -d '{ \"owner\": \"string\", \"payplan\": \"string\",\"status\": true}'"
